# 42_a_maze_ing

./: .gitmodules  LICENSE  Makefile  README.md  __main__.py  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  test.py
docs/src/mlx/: README.md  mlx.3.md  mlx_extra.3.md  mlx_loop.3.md  mlx_new_image.3.md  mlx_new_window.3.md  mlx_pixel_put.3.md
licenses/: LICENSE
src/: MANIFEST.in  __init__.py  __main__.py  config_checker.py  main.py  maze_class.py  maze_generator.py  test.py
src/generator/: __init__.py  main.py
src/generator/src/: __init__.py  cell.py  config_checker.py  config_validator.py  exceptions.py  ft_logo_cells.py  generator.py  maze.py  maze_class.py  maze_generator.py  pathfinder.py  player.py  predefined.py  types.py
src/generator/src/unused/: cell.py
src/mazegen/: __init__.py  __main__.py
src/mazegen/generator/: __init__.py  main.py
src/mazegen/generator/src/: __init__.py  config_validator.py  ft_logo_cells.py  gen_types.py  generator.py  maze.py  pathfinder.py  player.py
src/mazegen/visualizer/src/: main.py
src/visualizer/: __init__.py
src/visualizer/src/: __init__.py  main.py  maze_visualizer.py
src/visualizer/src/components/: __init__.py  background.py  base_component.py  cell_component.py  footprints_spawner.py  maze_manager.py  player_movement.py  sprite_renderer.py  sprite_renderes.py
src/visualizer/src/core/: __init__.py  engine_manager.py  events.py  input.py  sprite.py  window.py
src/visualizer/src/exceptions/: __init__.py
src/visualizer/src/nodes/: __init__.py  (+11 more)
(+89 files in other folders)
