[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Amazing description"
readme = "README.md"
authors = [{ name="Juan Pablo Vizcaino Delgado", email="jvizcain@student.42madrid.com"},
		   { name="Nora de Fitero Teijeira", email="dde-fite@student.42madrid.com"}]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
